--- a/public/css/style-cadastro.css
+++ b/public/css/style-cadastro.css
@@ -23,7 +23,7 @@ body{
 
 #div_cadastro{
     width: 100%;
-    height: 700px;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
