--- a/public/css/style-login.css
+++ b/public/css/style-login.css
@@ -23,7 +23,7 @@ body{
 
 #div_login{
     width: 100%;
-    height: 700px;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,7 +81,7 @@ body{
     align-self: center;
     background-color: #D82727;
     opacity: 0.8;
-    border: none;
+    border: solid black 1px;
     border-radius: 10px;
     cursor: pointer;
     color: white;
@@ -90,6 +90,6 @@ body{
 }
 
 #bt_login:hover{
+    color: black;
     opacity: 1;
-    border: solid black 1px;
 }
