--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,22 +29,22 @@ body{
 
 .navbar{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     list-style: none;
     width: 50%;
 }
 
 .navbar a{
+    transition: 0.5s;
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 1.4rem;
     cursor: pointer;
 }
 
 .navbar a:hover{
     opacity: 1;
-    transition: 0.5s;
     color: black;
     font-weight: bold;
 }
@@ -55,7 +55,7 @@ body{
 }
 
 .banner .container{
-    height: 510px;
+    height: 75vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -64,27 +64,35 @@ body{
 .banner h1{
     margin: 0;
     font-weight: 800;
-    font-size: 2.2rem;
+    font-size: 3rem;
     margin-bottom: 50px;
 }
 
-.banner button{
-    margin: 0;
-    padding: 0.6rem;
+.footer{
     background-color: #D82727;
-    opacity: 0.9;
-    border: none;
-    border-radius: 25px;
-    width: 300px;
-    height: 60px;
-    font-size: 2rem;
-    font-weight: 400;
-    cursor: pointer;
+    height: 15vh;
+    padding: 15px;
+    border-top: solid black 2px;
 }
 
-.banner button:hover{
-    opacity: 1;
-    transition: 0.4s;
-    font-weight: 600;
-    color: antiquewhite;
+.footer .container{
+    justify-content: center;
+    flex-direction: column;
+}
+
+.txtFooter{
+    color:antiquewhite;
+    text-align: center;
+    font-size: 1.3rem;
+}
+
+.txtFooter i{
+    padding: 5px;
+    font-size: 2.2rem;
+    color:white;
+    transition: 0.5s;
+}
+
+.txtFooter i:hover{
+    color:black;
 }
